# OncoAgents

./: .env.template  .gitignore  README.md  app.py  pyproject.toml  ruff.toml  run.sh  run_experiment.sh  run_experiment_all.sh  run_experiment_test.sh  run_experiment_train.sh  start_app.sh
apps/: README.md  app_old.py  exp3_const.py  experiment_1.py  experiment_2.py  experiment_3.py  start_app.sh
scripts/background_generation/: README.md  main.py  statistics.py
scripts/dataset_construction/: README.md  fix.py  get_stage.py  main.py  reiterate_prompt.py  statistics.py
scripts/diagnosis_preprocess/: README.md  de-identify.py  duplicate.py  main.py  main_xlsx.py  preprocess_prompt.py
scripts/dpo_data_generation/: README.md  main.py  revise_prompt.py
scripts/dpo_train/: cfg_dpo_qwen3-8b_full_thinking.yaml  train_dpo_qwen3-8b_full_thinking.sh
scripts/experiments/: README.md  comm_ana_revised.py  experiment_2_analysis.py  experiment_2_plot.py  experiment_3_1_analysis.py  experiment_3_2_analysis.py  experiment_4_2_analysis.py  experiment_4_generate_html.py  experiment_4_plot.py  fig3_c-g.py  fig3_i.py  specialist_ranking.py
scripts/note_generation/: README.md  generate_html.py  main.py  note_generation_prompt.py
scripts/server/: serve.sh  start.sh
scripts/sft_data_generation/: README.md  main.py
scripts/sft_train/: cfg_sft_qwen3-8b_full_thinking.yaml  train_sft_qwen3-8b_full_thinking.sh
src/: agent.py  chat_with_patient.py  client.py  logger.py  main.py  tools.py
src/MDT/: __init__.py  agent.py  main.py  rag_module.py  tools.py
src/backend/: __init__.py  client.py  language_model.py
src/conversation/: conversation.py
src/emotional_patient/: __init__.py  emotional_patient.py  emotional_patient_new.py  main.py  new_emotional_patient.py  new_new_emotional_patient.py  not_emotional_patient.py  simple_emotional_patient.py
src/json_schema/: __init__.py  conversation_json_schema.py  doctor_json_schema.py  emotional_patient_json_schema.py  emotional_patient_json_schema_new.py  judge_patient_json_schema.py  mdt_json_schema.py  not_emotional_patient_json_schema.py  preprocess_json_schema.py  rag_test_json_schema.py
src/mdt/: README.md  __init__.py  main.py  mdt.py  rag_module.py  rag_test.py  ragtool.py  test_mdt.py
src/preprocess/: README.md  display.py  main.py  preprocess.sh
src/prompt/: __init__.py  conversation_prompt.py  (+17 more)
(+26 files in other folders)
