[project]
name = "OncoAgents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "bitsandbytes>=0.49.2",
    "chromadb>=1.4.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "jieba>=0.42.1",
    "matplotlib>=3.10.8",
    "modelscope>=1.34.0",
    "openpyxl>=3.1.5",
    "reportlab>=4.4.10",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.53.0",
    "streamlit-sortables>=0.3.1",
    "tqdm>=4.67.1",
    "transformers==4.57.1",
    "vllm>=0.13.0",
    "wandb>=0.25.0",
    "wordcloud>=1.9.6",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff]
target-version = "py313"
exclude = ["**/*_prompt.py"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
